--- a/style.css
+++ b/style.css
@@ -48,3 +48,36 @@ body{
 }
 .card-2__music {
 }
+.card-3 {
+    background: linear-gradient(to left top,#00ffbf, #af4600);
+    width: 350px;
+    height: 400px;
+    display: inline-block;
+    padding-top: 30px;
+    border-radius: 20px;
+    margin-left: 500px;
+    margin-top: 30px;
+}
+.card-3__img {
+    width: 200px;
+}
+.card-3__name {
+    font-family: 'Monomaniac One', sans-serif;
+}
+.card-3__music {
+}
+.card-4 {
+    background: linear-gradient(to left top,#ea00ff, #8faf00);
+    width: 350px;
+    height: 400px;
+    display: inline-block;
+    padding-top: 47px;
+    border-radius: 20px;
+    margin-left: 40px;
+}
+.card-4__img {
+    width: 200px;
+}
+.card-4__name {
+    font-family: 'Monomaniac One', sans-serif;
+}
